--- a/hls_player.html
+++ b/hls_player.html
@@ -11,7 +11,8 @@
     <input id='url' size="70" />
     <input type="button" onclick='play()' value="Click"><br>
     <video id="video" width="500" height="500" controls></video>
-    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script> -->
+    <script src="https://hls-js.netlify.app/dist/hls.js"></script>
     <script>
         function play()
         {
